Added Featrure Matrix link

--- a/www/project_docs.html
+++ b/www/project_docs.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_docs.html,v 1.4 2001/03/09 04:50:16 jon Exp $ -->
+<!-- $Id: project_docs.html,v 1.5 2001/04/13 22:16:14 jgallegos Exp $ -->
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <html>
 
@@ -20,6 +20,7 @@
             <ul>
                 <li><a href="scarab-design.html">Design document</a></li>
                 <li><a href="usemodels/index.html">Use Models: user classes, use cases, screen descriptions</a></li>
+	<li><a href="scarabfeaturematrix.html">Feature Matrix</a></li>
 <!--            <li><a href="mockup/">User interface mockups</a></li> -->
                 <li><a href="scarab-schema.html">Database schema image</a></li>
                 <li><a href="http://scarab.tigris.org/source/browse/scarab/src/sql/scarab-schema.xml">Database schema 
