added a Things to Resolve section

--- a/www/integration.html
+++ b/www/integration.html
@@ -8,7 +8,7 @@
 <p><font size="6">Scarab/SourceCast Integration</font></p>
 <p>
 By: Jon S. Stevens<br/>
-$Id: integration.html,v 1.1 2001/04/18 01:05:06 jon Exp $
+$Id: integration.html,v 1.2 2001/04/22 21:39:34 jon Exp $
 </p>
 
 <p><font size="4">Introduction</font></p>
@@ -155,6 +155,18 @@ As far as validation of Permissions and Roles with an ACL system, all that
 needs to be done is to use the one provided with Turbine. Under the covers,
 this class simply makes references to the TurbineSecurity class which makes
 references to the SecurityService.
+</p>
+
+<p><font size="4">Things to Resolve</font></p>
+
+<p>
+One problem with the SourceCast system that we will need to resolve
+before the integration can be completed is to have SourceCast running on
+a newer servlet container that supports Servlet API 2.1 or higher
+because at this point in time, the Turbine Servlet requires 2.1. It
+might be possible to spend the time fixing Turbine, however, that seems
+like wasted effort since JServ is a dead product continuing to use it
+into the future seems like a bad idea.
 </p>
 
 <p>
