removed outdated admin page

--- a/www/project_nav.html
+++ b/www/project_nav.html
@@ -1,12 +1,4 @@
-<!-- $Id: project_nav.html,v 1.2 2000/12/19 01:22:58 artem Exp $ -->
-<a class="nav" href="/index.html">Project&nbsp;Home</a><br>
-<br>
-<a class="nav" href="/project_status.html">Status/TODO</a><br>
-<a class="nav" href="/project_docs.html">Docs</a><br>
-<a class="nav" href="/project_development_tools_and_technology.html">Tools/Techs</a><br>
-<a class="nav" href="/project_source.html">Source/CVS</a><br>
-<br>
-<a class="nav" href="/project_mail.html">Mailing&nbsp;Lists</a><br>
-<a class="nav" href="/project_bugs.html">Bugs</a><br>
-<a class="nav" href="/project_members.html">Members</a><br>
-<a class="nav" href="/project_admin.html">Admin</a><br>
+<a class="nav" href="/project_status.html">Status/TODO</a> |
+<a class="nav" href="/project_docs.html">Docs</a> |
+<a class="nav" href="/project_development_tools_and_technology.html">Tools/Techs</a> |
+<a class="nav" href="/project_members.html">Members</a> 
