--- a/www/project_nav.html
+++ b/www/project_nav.html
@@ -1,4 +1,4 @@
 <a class="nav" href="/project_status.html">Status/TODO</a> |
 <a class="nav" href="/project_docs.html">Docs</a> |
 <a class="nav" href="/project_development_tools_and_technology.html">Tools/Techs</a> |
-<a class="nav" href="/project_members.html">Members</a> 
+<a class="nav" href="/project_members.html">Responsibilites</a> 
