--- a/www/project_status.html
+++ b/www/project_status.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_status.html,v 1.3 2001/04/27 23:09:10 jon Exp $ -->
+<!-- $Id: project_status.html,v 1.4 2001/04/28 02:15:37 fedor Exp $ -->
 <!doctype html public "-//w3c//dtd html 4.0 transitional//en">
 <html>
 <head>
@@ -11,11 +11,11 @@
 <table border=0 cellpadding=2 width="98%" bgcolor="#FFFFFF" >
     <tr> 
         <td width="100%" bgcolor="#CCCC99"><b><font face="Arial, Helvetica, sans-serif" color="#000033">Status 
-            of the Scarab Issue Tracking System (SBTS)</font></b></td>
+            of the Scarab Issue Tracking System (SITS)</font></b></td>
     </tr>
 </table>
 <p>
-Last Updated: $Date: 2001/04/27 23:09:10 $
+Last Updated: $Date: 2001/04/28 02:15:37 $
 </p>
 
 <p>
