Added UC-# for easier reference

--- a/www/usemodels/usecases.html
+++ b/www/usemodels/usecases.html
@@ -11,56 +11,56 @@
 <ul>
   <li>Basic Data Entry: 
     <ul>
-      <li>[M1] <a href="basicdataentry.html#UC-01">Creating an issue</a> 
+      <li>[M1] <a href="basicdataentry.html#UC-01">Creating an issue (UC-01)</a> 
       <li> Creating an issue based on template 
       <li> Creating a template for later use 
     </ul>
   <li>Basic Browsing and Searching: 
     <ul>
-      <li>[M1] <a href="browsingandsearching.html#UC-02">Search for issue by ID</a> 
-      <li>[M1] <a href="browsingandsearching.html#UC-03">Quick Search for issues</a> 
-      <li><a href="browsingandsearching.html#UC-04">Advanced search for issues</a> 
-      <li><a href="browsingandsearching.html#UC-05">Store issue query</a> 
-      <li><a href="browsingandsearching.html#UC-06">Rerun stored issue Query</a> 
-      <li><a href="browsingandsearching.html#UC-07">Step through related issues</a> 
+      <li>[M1] <a href="browsingandsearching.html#UC-02">Search for issue by ID (UC-02)</a> 
+      <li>[M1] <a href="browsingandsearching.html#UC-03">Quick Search for issues (UC-03)</a> 
+      <li><a href="browsingandsearching.html#UC-04">Advanced search for issues (UC-04)</a> 
+      <li><a href="browsingandsearching.html#UC-05">Store issue query (UC-05)</a> 
+      <li><a href="browsingandsearching.html#UC-06">Rerun stored issue Query (UC-06)</a> 
+      <li><a href="browsingandsearching.html#UC-07">Step through related issues (UC-07)</a> 
     </ul>
   <li>Basic Editing: 
     <ul>
       <li>[M1] <a href="basicediting.html#UC-08">Assign an issue to specific 
-        developer</a> 
-      <li>[M1] <a href="basicediting.html#UC-09">Change an issue</a> 
-      <li><a href="basicediting.html#UC-10">Change multiple issues at once</a> 
-      <li><a href="basicediting.html#UC-11">Edit milestone details</a> 
-      <li><a href="basicediting.html#UC-12">Defer issue until further notice</a> 
-      <li><a href="basicediting.html#UC-13">Reject invalid issue</a> 
-      <li><a href="basicediting.html#UC-14">Copy an Issue</a> 
-      <li><a href="basicediting.html#UC-15">Move an Issue</a> 
-      <li><a href="basicediting.html#UC-17">Attach a File to an Issue</a> 
+        developer (UC-08)</a> 
+      <li>[M1] <a href="basicediting.html#UC-09">Change an issue (UC-09)</a> 
+      <li><a href="basicediting.html#UC-10">Change multiple issues at once (UC-10)</a> 
+      <li><a href="basicediting.html#UC-11">Edit milestone details (UC-11)</a> 
+      <li><a href="basicediting.html#UC-12">Defer issue until further notice (UC-12)</a> 
+      <li><a href="basicediting.html#UC-13">Reject invalid issue (UC-13)</a> 
+      <li><a href="basicediting.html#UC-14">Copy an Issue (UC-14)</a> 
+      <li><a href="basicediting.html#UC-15">Move an Issue (UC-15)</a> 
+      <li><a href="basicediting.html#UC-17">Attach a File to an Issue (UC-17)</a> 
     </ul>
   <li>Basic Reporting: 
     <ul>
-      <li><a href="basicreporting.html#UC-18">Print a Predefined Report</a> 
-      <li> <a href="basicreporting.html#UC-19">Create a MyReports Report</a> 
-      <li><a href="basicreporting.html#UC-20">Print a MyReports Report</a> 
-      <li><a href="basicreporting.html#UC-21">Automate/Batch a Report</a> 
+      <li><a href="basicreporting.html#UC-18">Print a Predefined Report (UC-18)</a> 
+      <li> <a href="basicreporting.html#UC-19">Create a MyReports Report (UC-19)</a> 
+      <li><a href="basicreporting.html#UC-20">Print a MyReports Report (UC-20)</a> 
+      <li><a href="basicreporting.html#UC-21">Automate/Batch a Report (UC-21)</a> 
       <li><a href="basicreporting.html#UC-22">Change a MyReport to a Predefined 
-        Report</a> 
+        Report (UC-22)</a> 
     </ul>
   <li>Integration: 
     <ul>
       <li><a href="integration.html#UC-16">Establish a Link Between an Issue ID 
-        and a Commit ID</a> 
+        and a Commit ID (UC-16)</a> 
     </ul>
   <li>Administration: 
     <ul>
-      <li><a href="administration.html#UC-23">Define Issue Status</a> 
-      <li><a href="administration.html#UC-24">Define Status Transition Model</a>
- 	  <li><a href="administration.html#UC-25">Define Attributes</a>
-      <li><a href="administration.html#UC-26">Customize Attribute Options</a>
-      <li><a href="administration.html#UC-27">Customize Thresholds</a>
-      <li><a href="administration.html#UC-28">Customize Email Notifications</a>
-	  <li><a href="administration.html#UC-29">Import a Database File</a> 
-      <li><a href="administration.html#UC-30">Export a Database File</a>
+      <li><a href="administration.html#UC-23">Define Issue Status (UC-23)</a> 
+      <li><a href="administration.html#UC-24">Define Status Transition Model (UC-24)</a>
+ 	  <li><a href="administration.html#UC-25">Define Attributes (UC-25)</a>
+      <li><a href="administration.html#UC-26">Customize Attribute Options (UC-26)</a>
+      <li><a href="administration.html#UC-27">Customize Thresholds (UC-27)</a>
+      <li><a href="administration.html#UC-28">Customize Email Notifications (UC-28)</a>
+	  <li><a href="administration.html#UC-29">Import a Database File (UC-29)</a> 
+      <li><a href="administration.html#UC-30">Export a Database File (UC-30)</a>
 
     </ul>
   </li>
