--- a/www/usemodels/usecases/usecase02.html
+++ b/www/usemodels/usecases/usecase02.html
@@ -10,7 +10,7 @@
     <html>
         <head>
             <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"/>
-            <title>Scarab - Entering an Issue</title>
+            <title>Scarab - Search for Issue by ID</title>
         </head>
 
         <body bgcolor="#ffffff" text="#000000" link="#525D76">        
@@ -36,7 +36,7 @@
                                                                 <table border="0" cellspacing="1" bgcolor="#cccccc">
   <tr>
     <td bgcolor="#ffffff" align="right" valign="top"><b>Name:</b></td>
-        <td bgcolor="#ffffff" valign="top">UC-01 - Entering an Issue</td>
+        <td bgcolor="#ffffff" valign="top">UC-02 - Search for Issue by ID</td>
   </tr>
   <tr>
     <td bgcolor="#ffffff" align="right" valign="top"><b>Extends:</b></td>
@@ -45,11 +45,8 @@
   <tr>
     <td bgcolor="white" align="right" valign="top"><b>Description:</b></td>
     <td bgcolor="white" valign="top">
-       User enters an issue, duplicates are avoided if possible. The
-       static fields of an issue are entered first along with a short
-       description. This is used to look for duplicate issues. If it is
-       a duplicate, the currently selected issue gains a vote.  If a new
-       issue is entered, it is well specified and actionable.
+       User enters Issue ID and sees the details of the specified Issue
+       or an appropriate message.
 </td>
   </tr>
   <tr>
@@ -69,10 +66,13 @@
     <td bgcolor="white" align="right" valign="top"><b>Stakeholders:</b></td>
     <td bgcolor="white" valign="top">
     <ul>
-            <li>QA Manager : wants to avoid duplicate issues.</li>
-            <li>QA Manager : wants enough info to assign issue to proper developer, deadline.</li>
-            <li>QA Manager : wants well-formed, well-written issue reports.</li>
-            <li>Assigned Developer : wants detailed description, steps to reproduce.</li>
+            <li>Project Participant : wants to be able to specify issue
+      unamgiously via an easy-to-type-or-say string.  This is often
+      done via email, in code comments, in chat, or verbally on phone
+      or in meetings.  Challenge is that unambiguous specification is
+      at odds with brevity.  Assumes project name or URL as shared
+      knowledge.
+    </li>
         </ul>
     </td>
   </tr>
@@ -80,25 +80,24 @@
     <td bgcolor="white" align="right" valign="top"><b>PreRequirements:</b></td>
     <td bgcolor="white" valign="top">
     <ul>
+            <li>Logged in</li>
             <li>Project set up</li>
-            <li>User knows which project to report the issue against</li>
+            <li>Exiting Issue</li>
+            <li>User knows Issue ID</li>
         </ul>
     </td>
   </tr>
   <tr>
     <td bgcolor="white" align="right" valign="top"><b>Result:</b></td>
     <td bgcolor="white" valign="top">
-New issue is entered, or matching existing issue has vote increased.
+Details of the Issue is displayed
 </td>
   </tr>
   <tr>
     <td bgcolor="white" align="right" valign="top"><b>DataSets:</b></td>
     <td bgcolor="white" valign="top">
     <ul>
-            <li>Quick fields</li>
-            <li>Yes/No on duplicate candidates</li>
-            <li>Detailed fields</li>
-            <li>Field values based on user profile: e.g., reporter</li>
+            <li>Issue ID</li>
         </ul>
     </td>
   </tr>
@@ -106,22 +105,18 @@ New issue is entered, or matching existing issue has vote increased.
     <td bgcolor="white" align="right" valign="top"><b>Q/A:</b></td>
     <td bgcolor="white" valign="top">
     <ul>
-            <li>Does the user have limited votes?
-            <ul>
-            <li><font color="green"></font></li>
-            </ul>
-        </li>
-            <li>Do the forms help users enter good issue reports?
-            <ul>
-            <li><font color="green"></font></li>
-            </ul>
-        </li>
-            <li>At what point do users have to log in?
+            <li>If all Issues are in project context,               is there a quick way to jump to Issue in another project?
             <ul>
             <li><font color="green">
-       Users need to log in before making modifications
-       to the system. In other words, in order for the system to track 
-       modifications a user makes, the user needs to be logged in.</font></li>
+        If possible a link to the other project should be provided.
+    </font></li>
+            </ul>
+        </li>
+            <li>How can this functionality be put on tigris StartPage?
+            <ul>
+            <li><font color="green">
+        As a small text entry box.
+    </font></li>
             </ul>
         </li>
         </ul>
@@ -131,8 +126,7 @@ New issue is entered, or matching existing issue has vote increased.
     <td bgcolor="white" align="right" valign="top"><b>Notes:</b></td>
     <td bgcolor="white" valign="top">
     <ul>
-            <li>No anonymous users can post issues</li>
-            <li>Admin use case to to put which fields in the NewIssueBox</li>
+            <li>If validation fails, Scarab displays an error</li>
         </ul>
     </td>
   </tr>
@@ -141,44 +135,11 @@ New issue is entered, or matching existing issue has vote increased.
     <td bgcolor="white" valign="top">
         
       <ol>
-        <li>User: visit <a href="ProjectIssues.html">ProjectIssues</a> for a given project </li>
-        <li>User: log in as non-guest if not already</li>
-        <li>User: enter fields in <a href="ProjectIssues.html#NewIssueBox">NewIssueBox</a>, hit submit
-           <ul>
-            <li>choose type of issue</li>
-            <li>enter summary</li>
-            <li>enter platform, os</li>
-            <li>enter severity, priority (role specific)</li>
-           </ul>
-        </li>
-        <li>Scarab: checks for duplicates</li>
-        <li>If duplicates found:
-           <ol type="a">
-               <li>Scarab: display <a href="Deduplicate.html">Deduplicate</a> Page</li>
-               <li>User: review list of duplicates</li>
-               <li>If dup matches user's issue:
-                    <ul type="a">
-                        <li>User: vote for matching issue</li>
-                    </ul>
-               </li>
-               <li>If no match:
-                   <ul type="a">
-                       <li>User: indicate no match and show the next found potential duplicate issue. If no more 
-                       duplicate issues, then show <a href="NewIssueDetails.html">NewIssueDetails</a> page</li>
-                   </ul>
-               </li>
-           </ol>
-        </li>
-        <li>Scarab: display <a href="NewIssueDetails.html">NewIssueDetails</a> page</li>
-        <li>User: enter fields and hit submit</li>
-        <li>Scarab: validate data and show next screen or bounce back to current screen with previous
-                    information populated again.</li>
-        <li>Scarab: store values in database</li>
-        <li>Scarab: display <a href="NewIssueAddendum.html">NewIssueAddendum</a> page with  
-            <a href="IssueChangedConfirmation.html">IssueChangedConfirmation</a></li>
-        <li>User: options to attach a file to issue. Scarab: needs to track and deal with this properly.</li>
-        <li>Scarab: display <a href="ProjectIssues.html">ProjectIssues</a> page 
-                     with <a href="IssueChangedConfirmation.html">IssueChangedConfirmation</a> </li>
+        <li>User: visit ProjectIssues, or any Scarab page in project context.</li>
+        <li>User: Enter issue ID into small field and hit button</li>
+        <li>[validation] Scarab: validates issue number</li>
+        <li>[validation] Scarab: validates user role permissions</li>
+        <li>Scarab: display IssueView details</li>
       </ol>
 
     </td>
